chore: Update devcontainer.json with Node.js extension and LeetCode extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,14 @@
   "name": "leetcode-rs",
   "image": "mcr.microsoft.com/devcontainers/rust:latest",
   "features": {
+    "ghcr.io/devcontainers/features/node:1": {}
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "GitHub.copilot",
+        "LeetCode.vscode-leetcode"
+      ]
+    }
   }
 }
